2011-02-08 Daniel Krieg <krieg@fias.uni-frankfurt.de>

    * src/carriers/mpi_carrier/: added a carrier for broadcasting
    using MPI (called bcast); fixed fatal typo in thread safety detection,
    which was relevant for e.g. openmpi

2011-02-08  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/YarpPlugin.cmake: propagate LINK_DIRECTORIES information, 
	needed by current OpenCVConfig.cmake [thanks Lorenzo Natale]

2011-02-07  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/dll/: example of loading from a shared
	library or DLL (thin wrapper around ACE_DLL).

	* src/libYARP_OS/include/yarp/os/SharedLibrary.h: prep
	work for loading carriers/devices dynamically.

2011-02-04 Daniel Krieg <krieg@fias.uni-frankfurt.de>

    * src/doc/yarp_port_auth.dox: Included a tutorial about
    the port authentication mechanism (added to svn on 2010-10-18)
    in the YARP documentation

2011-02-01  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* conf/YarpDoc.cmake: YARP documentation should now always 
	be verbose, rather than sometimes filtered as it has
	been for legacy reasons [thanks Lorenzo Natale]

2011-02-01  Ugo Pattacini - Carlo Ciliberto <ugo.pattacini@iit.it>, <carlo.ciliberto@iit.it>

	* yarpview: fixed timing statistics

2011-01-28  Ugo Pattacini <ugo.pattacini@iit.it>

	* src/libYARP_dev/include/yarp/dev/CartesianControl.h: added setTaskVelocities(.) method

2011-01-28  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/YarpDoc.cmake: fix generation of verbose documentation
	[thanks Giorgio Metta]

2011-01-27  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_dev/CMakeLists.txt: install missing .inl
	file [thanks Lorenzo Natale]

2011-01-24  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/template/YARPConfigVersion.cmake.in: add version 
	information for side-by-side YARP installs.

	* conf/YarpDescribe.cmake: add version information to
	YARPConfig.cmake [thanks Lorenzo Natale]

	* example/swig/yarp.i: add a wrapper for 