@@ -57,6 +57,11 @@ public:
 	 * @return - the number of received characters (including the '\n''\r' chars, plus the buffer terminator '\0'). The function returns 0 if no chars are received.
      */
 	virtual int  receiveLine(char* line, const int MaxLineLength) = 0;
+    /**
+     * Flushes the internal buffer.
+	 * @return - the number of flushed characters.
+     */
+	virtual int  flush() = 0;
 };
 
 #endif
